--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,3 +9,10 @@
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
+
+.tariff-background {
+    background-image: url('/asset/tariff-background-minimal.svg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
